--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -26,7 +26,7 @@
     grid-row-start: 4;
     grid-row-end: 12;
     z-index: 3;
-    background-color: rgb(9, 95, 83);
+    background-color:#0E0F19;
 }
 
 .box {
@@ -35,7 +35,7 @@
     grid-row-start: 1;
     grid-row-end: span 4;
     z-index: 2;
-    background-color: #5d8939;
+    background-color: #81A684;
     z-index: 2;
     font-size: 40px;
     color: white;
