--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -9,12 +9,32 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.card_img{
+.card-img{
   background: white;
   height: 250px;
   width: 100%;
   object-fit:cover;
   vertical-align:middle;
+}
+
+.card h3 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  padding-right: 25px;
+}
+
+.card p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+}
+
+.card .card-info {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
 }
 
 .grid{
